kubernetes/mongo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo
        app.kubernetes.io/component: database
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
        ports:
          - containerPort: 27017
        resources:
          requests:
            cpu: 500m
            memory: 256M
          limits:
            cpu: 2000m
            memory: 1G
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/component: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
