kubernetes/ganymede.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ganymede
  namespace: ganymede
  labels:
    app.kubernetes.io/name: ganymede
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ganymede
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ganymede
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: ganymede
          image: ghcr.io/ngc7293/ganymede:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 512M
            limits:
              cpu: 500m
              memory: 512M
          volumeMounts:
            - name: config-volume
              mountPath: /app/Ganymede.toml
              subPath: Ganymede.toml
      volumes:
        - name: config-volume
          configMap:
            name: ganymede-config-cm
---
apiVersion: v1
kind: Service
metadata:
  name: ganymede
  namespace: ganymede
  labels:
    app.kubernetes.io/name: ganymede
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ganymede
    app.kubernetes.io/component: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: ganymede
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: ganymede
    app.kubernetes.io/component: api
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ganymede.davidbourgault.ca
      secretName: ganymede-letsencrypt-cert
  rules:
    - host: ganymede.davidbourgault.ca
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ganymede
                port:
                  number: 3000
